examples/neg/mainnoargs.effekt
module mainnoargs

def main(n: Int) = println(n)