examples/neg/mainnoargs.check
examples/neg/mainnoargs.effekt:1:1:error: Main does not take arguments
module mainnoargs
^
